Initial remote archive sample; some issues with docker network static ips