@@ -1,7 +1,3 @@
 #!/bin/sh
 
-echo "host:" $ARCHIVEHOST
-echo "control port:" $CONTROLPORT
-echo "events port:" $EVENTSPORT
-
-java --illegal-access=permit -jar /root/jar/archive-host-0.1-SNAPSHOT-all.jar
+java --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Djava.net.preferIPv4Stack=true -jar /root/jar/archive-host-0.1-SNAPSHOT-all.jar
